chg: Chg comportamento de etag para cache
