# src/main/java/br/com/gabrieloliveira/mercadolivre/usecase/product/impl/GetProductByIdHandler.java
@@ -2,12 +2,10 @@ package br.com.gabrieloliveira.mercadolivre.usecase.product.impl;
 
 import br.com.gabrieloliveira.mercadolivre.model.Product;
 import br.com.gabrieloliveira.mercadolivre.usecase.product.GetProductByIdStrategy;
-
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
@@ -15,23 +13,23 @@ import org.springframework.stereotype.Component;
 @Slf4j
 public class GetProductByIdHandler {
 
+  private final Map<String, GetProductByIdStrategy> strategies;
 
-    private final Map<String, GetProductByIdStrategy> strategies;
+  public GetProductByIdHandler(List<GetProductByIdStrategy> strategies) {
+    this.strategies =
+        strategies.stream()
+            .collect(java.util.stream.Collectors.toMap(GetProductByIdStrategy::name, s -> s));
+  }
 
-    public GetProductByIdHandler(List<GetProductByIdStrategy> strategies) {
-        this.strategies = strategies.stream()
-                .collect(java.util.stream.Collectors.toMap(GetProductByIdStrategy::name, s -> s));
+  public Optional<Product> execute(UUID id, Optional<Boolean> cache) {
+
+    if (cache.isPresent() && cache.get()) {
+      Optional<Product> fromRedis = strategies.get("redis").execute(id);
+      if (fromRedis.isPresent()) {
+        return fromRedis;
+      }
     }
 
-    public Optional<Product> execute(UUID id, Optional<String> ifNoneMatch) {
-
-        if (ifNoneMatch.isPresent()) {
-            Optional<Product> fromRedis = strategies.get("redis").execute(id, ifNoneMatch);
-            if (fromRedis.isPresent()) {
-                return fromRedis;
-            }
-        }
-
-        return strategies.get("db").execute(id, ifNoneMatch);
-    }
+    return strategies.get("db").execute(id);
+  }
 }
